--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <h1 class="col-xs-12 col-sm-8 col-md-5">Felipe Fiuza</h1>
 
                 <ul id="social-media" class="col-xs-12 col-sm-4 col-md-2">
-                    <li><a href="https://www.freecodecamp.org/felipefiuza" target="_blank"><i class="fa fa-free-code-camp" style="font-size:24px"></i></a></li>
-                    <li><a href="https://github.com/FelipeFiuza" target="_blank"><i class="fa fa-github" style="font-size:24px"></i></a></li>
-                    <li><a href="https://twitter.com/_Theamazi" target="_blank"><i class="fa fa-twitter" style="font-size:24px"></i></a></li>
+                    <li><a href="https://www.freecodecamp.org/felipefiuza"><i class="fa fa-free-code-camp" style="font-size:24px"></i></a></li>
+                    <li><a href="https://github.com/FelipeFiuza"><i class="fa fa-github" style="font-size:24px"></i></a></li>
+                    <li><a href="https://twitter.com/_Theamazi"><i class="fa fa-twitter" style="font-size:24px"></i></a></li>
                 </ul>
 
             </div>
