--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                         <figcaption>Prime Numbers Checker</figcaption>
                     </figure>
                     <figure class="col-xs-12 col-sm-12 col-md-6">
-                        <img src="img/prime-numbers-checker.png" alt="Prime-numbers-checker-project" width="100%" height="100%">
-                        <figcaption>Prime Numbers Checker</figcaption>
+                        <a href="https://github.com/angelinopires/java-exercises/tree/master/prjPOOAngelinoFelipeGilson"><img src="img/sales-control.png" alt="Prime-numbers-checker-project" width="100%" height="100%"></a>
+                        <figcaption>Sales Control in Java for OOP classes (pt-br)</figcaption>
                     </figure>
                 </div>
                 
-                <div class="row">
+                <!--<div class="row">
                     <figure class="col-xs-12 col-sm-12 col-md-6">
                         <img src="img/prime-numbers-checker.png" alt="Prime-numbers-checker-project" width="100%" height="100%">
                         <figcaption>Prime Numbers Checker</figcaption>
@@ -76,7 +76,7 @@
                         <img src="img/prime-numbers-checker.png" alt="Prime-numbers-checker-project" width="100%" height="100%">
                         <figcaption>Prime Numbers Checker</figcaption>
                     </figure>
-                </div>
+                </div>-->
                 
             </div>
             <hr>
